--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,12 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
-        
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:latest.release'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:latest.release'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,6 +22,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven {url 'http://developer.huawei.com/repo/'}
+        maven {url "https://jitpack.io" }
     }
 }
 
