--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,14 @@ android {
         versionCode rootProject.ext.android.versionCode
         versionName rootProject.ext.android.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [
+                        AppPackageName:"com.sad.assistant.keeplive.demo",//rootProject.ext.android.applicationId,
+                        AppGurdianId:'123abc'
+                ]
+            }
+        }
     }
     buildTypes {
         release {
@@ -32,7 +40,7 @@ dependencies {
 
     api project(rootProject.ext.dependencies["self-impl"])
     api rootProject.ext.dependencies["appcompat-v7"]
-
+    annotationProcessor project(rootProject.ext.dependencies["self-compiler"])
     testImplementation 'junit:junit:latest.release'
     androidTestImplementation 'com.android.support.test:runner:latest.release'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:latest.release'
