--- a/api/src/main/AndroidManifest.xml
+++ b/api/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
                 android:resource="@xml/sync_adapter" />
         </service>
         <provider
+            android:enabled="true"
+            android:multiprocess="true"
             android:name=".provider.AccountSyncProvider"
             android:authorities="${applicationId}.provider" />
 
