自动编译体系_持续

--- a/api/src/main/AndroidManifest.xml
+++ b/api/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
             android:enabled="true"
             android:multiprocess="true"
             android:name=".provider.AccountSyncProvider"
-            android:authorities="${applicationId}.provider" />
+            android:authorities="com.sad.assistant.live.guardian.api.provider" />
 
         <!--**************************HUAWEI SDK AGENT*************************-->
         <activity
