--- a/api/src/main/AndroidManifest.xml
+++ b/api/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- 检测wifi状态 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -25,6 +24,7 @@
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
     <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
+
 
 
 
@@ -50,6 +50,16 @@
             android:enabled="true"
             android:exported="true"
             />
+        <service android:name=".service.GuardiaService2"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":guardiaRemote"
+            />
+        <service android:name=".service.GuardiaService0"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            >
+
+        </service>
         <service
             android:exported="true"
             android:name=".service.GuardiaService4">
