--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     api rootProject.ext.dependencies["jsoup"]
     api rootProject.ext.dependencies["okhttp"]
     api rootProject.ext.dependencies["okio"]
+    api rootProject.ext.dependencies["gson"]
 }
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
