--- a/impl/build.gradle
+++ b/impl/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     api project(rootProject.ext.dependencies["self-api"])
-
+    annotationProcessor project(rootProject.ext.dependencies["self-compiler"])
     testImplementation 'junit:junit:latest.release'
     androidTestImplementation 'com.android.support.test:runner:latest.release'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:latest.release'
