--- a/api/src/main/AndroidManifest.xml
+++ b/api/src/main/AndroidManifest.xml
@@ -84,6 +84,22 @@
             android:name=".provider.AccountSyncProvider"
             android:authorities="com.sad.assistant.live.guardian.api.provider" />
 
+        <!-- com.sad.assistant.keeplive.receiver 接入HMSSDK PUSH块需要注册，第三方相关 :接收Push消息（注册、透传消息、通知栏点击事件）广播，
+                此receiver类需要开发者自己创建并继承com.huawei.hms.support.api.push.PushReceiver类，
+                参考示例代码中的类：com.huawei.hmsagent.HuaweiPushRevicer${PACKAGE_NAME} 要替换上您应用的包名-->
+        <receiver
+            android:name="com.sad.assistant.live.guardian.api.broadcastreceiver.GuardiaBroadcastReceiver2"
+            android:permission="${applicationId}.permission.PROCESS_PUSH_MSG">
+            <intent-filter>
+                <!-- 必须,用于接收token -->
+                <action android:name="com.huawei.android.push.intent.REGISTRATION" />
+                <!-- 必须, 用于接收透传消息 -->
+                <action android:name="com.huawei.android.push.intent.RECEIVE" />
+                <!-- 必须, 用于接收通知栏消息点击事件 此事件不需要开发者处理，只需注册就可以-->
+                <action android:name="com.huawei.intent.action.PUSH_DELAY_NOTIFY" />
+            </intent-filter>
+        </receiver>
+
         <!--**************************HUAWEI SDK AGENT*************************-->
         <activity
             android:name="com.huawei.appmarket.component.buoycircle.impl.delegete.BuoyBridgeActivity"
