--- a/api/src/main/AndroidManifest.xml
+++ b/api/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
     <application
         android:persistent="true"
         >
+        <meta-data
+            android:name="com.huawei.hms.client.appid"
+            android:value="appid=101124027" />
         <activity
             android:excludeFromRecents="true"
             android:exported="false"
